# gymnasium-planar-robotics

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/: ci.yml
.github/workflows/: ci.yml
docs/: Makefile  changelog.rst  conf.py  index.rst  installation_license.rst  make_own_env.rst  manipulation_envs.rst  overview.rst  planning_envs.rst  spelling_wordlist.txt  train_agents.rst
docs/_static/css/: custom_theme.css
docs/make_own_env/: basic_env.rst  basic_multi_env.rst  basic_single_env.rst  geometry_2D_utils.rst  impedance_control.rst  manual_control.rst  mujoco_utils.rst  rendering.rst
docs/manipulation_envs/: benchmark_pushing_env.rst
docs/overview/: intro_planar_robotics.rst
docs/planning_envs/: benchmark_planning_env.rst
gymnasium_planar_robotics/: __init__.py
gymnasium_planar_robotics/envs/: basic_env.py  basic_envs.py
gymnasium_planar_robotics/envs/assets/: beckhoff_apm4220_bumper.stl  beckhoff_apm4220_mover.stl  beckhoff_apm4330_bumper.stl  beckhoff_apm4330_mover.stl  beckhoff_apm4550_bumper.stl  beckhoff_apm4550_mover.stl  planar_motor_M3-06-04.stl  planar_motor_M3-15-05.stl  planar_motor_M3-25-05.stl  planar_motor_M4-11-01.stl  planar_motor_M4-18-01.stl
gymnasium_planar_robotics/envs/custom_testing/: custom_testing_env.py  custom_testing_env_nogoals.py  manual_nogoals_env.py
gymnasium_planar_robotics/envs/manipulation/: benchmark_pushing_env.py
gymnasium_planar_robotics/envs/planning/: benchmark_planning_env.py
gymnasium_planar_robotics/utils/: geometry_2D_utils.py  impedance_control.py  manual_control.py  mujoco_utils.py  rendering.py  rotations_utils.py
tests/: test_basic_env.py  test_benchmark_planning_env.py  test_benchmark_pushing_env.py  test_geometry_2D_utils.py
